--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "almas-alright/singularity-assessment-test",
+    "description": "Laravel package to generate a complete CRUD operation for sinngularity assessment test",
     "keywords": [
-        ":vendor_name",
-        ":package_slug"
+        "almas-alright",
+        "singularity-assessment-test"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/almas-alright/singularity-assessment-test",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "almas_alright",
+            "email": "kutsnalmas@gmail.com",
             "role": "Developer"
         }
     ],
@@ -18,28 +18,31 @@
         "php": "^8.1"
     },
     "require-dev": {
-        :require_dev_testing,
-        :require_dev_codestyle,
+        "illuminate/support": "*",
+        "laravel/pint": "^1.2",
+        "orchestra/testbench": "^7.0",
+        "phpunit/phpunit": "^9.5",
         "spatie/ray": "^1.28"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src"
+            "AlmasAlright\\SingularityAssessmentTest\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "AlmasAlright\\SingularityAssessmentTest\\Tests\\": "tests"
         }
     },
     "scripts": {
-        :scripts_testing,
-        :scripts_codestyle
+        "test": "vendor/bin/phpunit",
+            "test-coverage": "vendor/bin/phpunit --coverage",
+        "format": "vendor/bin/pint"
     },
     "config": {
         "sort-packages": true,
         "allow-plugins": {
-            :plugins_testing,
+
             "phpstan/extension-installer": true
         }
     },
