--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,13 @@
             "AlmasAlright\\SingularityAssessmentTest\\Tests\\": "tests"
         }
     },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "AlmasAlright\\SingularityAssessmentTest\\Providers\\SingularityAssessmentServiceProvider"
+            ]
+        }
+    },
     "scripts": {
         "test": "vendor/bin/phpunit",
             "test-coverage": "vendor/bin/phpunit --coverage",
